--- a/src/main/resources/back/app.properties
+++ b/src/main/resources/back/app.properties
@@ -1,4 +1,4 @@
 db.driver = com.mysql.cj.jdbc.Driver
-db.url = jdbc:mysql://db.c0liuw4mmk9x.eu-west-3.rds.amazonaws.com:3306/bids_site
+db.url = jdbc:mysql://db.c0liuw4mmk9x.eu-west-3.rds.amazonaws.com:3306/just_bid_it
 db.user = admin
 db.pass = xamodrakas
