--- a/src/main/resources/back/app.properties
+++ b/src/main/resources/back/app.properties
@@ -2,3 +2,8 @@ db.driver = com.mysql.cj.jdbc.Driver
 db.url = jdbc:mysql://db.c0liuw4mmk9x.eu-west-3.rds.amazonaws.com:3306/just_bid_it
 db.user = admin
 db.pass = xamodrakas
+server.port: 8443
+server.ssl.key-store: classpath:keystore.p12
+server.ssl.key-store-password: justbidit
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: jetty
