--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     compile "org.apache.commons:commons-dbcp2:2.6.0"             //db connection pool
     compile "org.springframework:spring-jdbc:5.0.2.RELEASE"      //spring JDBC template utility
 
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.1' // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
+    compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0' // https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api
+
     providedRuntime "javax.servlet:javax.servlet-api:3.1.0"      //provided by the servlet container at runtime
 
     runtime "org.restlet.jee:org.restlet.ext.servlet:2.3.12"     //Servlet adapter for Restlet framework
